Model and Controller Package Added

--- a/coursemanagement/src/main/resources/templates/signup.html
+++ b/coursemanagement/src/main/resources/templates/signup.html
@@ -152,7 +152,7 @@ margin-left: 4px;
 			</div>
 			<div class="card-footer">
 				<div class="d-flex justify-content-center links">
-					Already Have an Account?<a href="./index.html">Login Here!</a>
+					Already Have an Account?<a href="./login">Login Here!</a>
 				</div>
 			</div>
 		</div>
