--- a/coursemanagement/src/main/resources/templates/login.html
+++ b/coursemanagement/src/main/resources/templates/login.html
@@ -115,19 +115,19 @@ margin-left: 4px;
 				<h3>Sign In</h3>
 			</div>
 			<div class="card-body">
-				<form action="<%= request.getContextPath() %>/login" method="post">
+				<form action="test" method="post">
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-user"></i></span>
 						</div>
-						<input type="text" class="form-control" placeholder="username">
+						<input type="text" class="form-control" name = "username" placeholder="username">
 						
 					</div>
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-key"></i></span>
 						</div>
-						<input type="password" class="form-control" placeholder="password">
+						<input type="password" class="form-control" name = "password" placeholder="password">
 					</div>
 					<div class="form-group">
 						<input type="submit" value="Login" class="btn float-right login_btn">
