--- a/coursemanagement/bin/src/main/resources/templates/signup.html
+++ b/coursemanagement/bin/src/main/resources/templates/signup.html
@@ -120,7 +120,7 @@ margin-left: 4px;
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-user"></i></span>
 						</div>
-						<input type="text" class="form-control" name = "fullname" placeholder="full name">
+						<input type="text" class="form-control" placeholder="full name">
 						
 					</div>
 
@@ -128,7 +128,7 @@ margin-left: 4px;
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-user"></i></span>
 						</div>
-						<input type="text" class="form-control" name = "username" placeholder="username">
+						<input type="text" class="form-control" placeholder="username">
 						
 					</div>
 
@@ -136,14 +136,14 @@ margin-left: 4px;
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-key"></i></span>
 						</div>
-						<input type="password" class="form-control" name = "password" placeholder="password">
+						<input type="password" class="form-control" placeholder="password">
 					</div>
 
                     <div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-key"></i></span>
 						</div>
-						<input type="password" class="form-control" name = "repassword" placeholder="re-enter password">
+						<input type="password" class="form-control" placeholder="re-enter password">
 					</div>
 					<div class="form-group">
 						<input type="submit" value="Sign-Up" class="btn float-right login_btn">
